[tool.poetry]
name = "DoItLater"
version = "0.1.0"
description = "When you have to do something... later."
authors = ["Evaldas Kazlauskis <evaldas@evalkaz.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
